# showme-rs

./: .gitignore  Cargo.toml  Makefile  README.md  log4rs.yaml
src/: c2.rs  clapsed.rs  color.rs  colorrun.rs  main.rs
src/fzf/: files.rs  gits.rs  history.rs  input.rs  kubectl.rs  mod.rs  model.rs  utils.rs
src/host/: all.rs  mod.rs
src/host/sys/: mod.rs
src/host/sys/linux/: hostname.rs  mod.rs
src/host/sys/macos/: hostname.rs
src/pub/: main.rs
src/scan/: mod.rs  output.rs  parse.rs  ping.rs  service.rs
src/server/: metrics.rs  mod.rs  s1.rs  s2.rs  s3.rs  s4.rs
src/sub/: main.rs
