[package]
name = "clapdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
tokio = { version = "1", features = ["full"]}
cursive = "*"
log = "0.4.8"
log4rs = "0.10.0"
colored = "2"
psutil = "3.2.1"
cfg-if = "0.1.10"
chrono = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }