[package]
name = "clapdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
tokio = { version = "1.8.3", features = ["full"] }
cursive = "*"
log = "0.4.8"
log4rs = "0.10.0"
colored = "2"
psutil = "3.2.1"
cfg-if = "0.1.10"
chrono = "0.4"
ctrlc = { version = "3.0", features = ["termination"] }
futures = "0.3.4"
stopwatch= "0.0.7"
oping = "0.3.3"
tui = { version = "0.17.0", default-features = false, features = ['crossterm'] }
crossterm = "0.21.0"
unicode-width = "0.1"
# serde = { version = "1", optional = true, features = ["derive"]}
serde = "1.0"
walkdir = "2.3.2"
warp = "0.3"
parking_lot = "0.10.0"
pretty_env_logger = "0.4"
serde_derive = "1.0"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]